--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js localhost 5000"
+    "start": "nodemon ./src/index.js localhost 3000"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "pug": "^2.0.4"
   }
 }
