--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "connect-mongo": "^3.0.0",
     "express": "^4.16.3",
     "mongodb": "^3.2.7",
