--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js localhost 3000"
+    "start": "nodemon ./src/index.js localhost 5000"
   },
   "author": "",
   "license": "ISC",
@@ -12,10 +12,14 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.16.2",
+    "express-validator": "^6.1.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.0",
     "morgan": "^1.9.0",
